; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_control.c_unset_trap.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_control.c_unset_trap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.recvbuf = type { i32, i32 }

@TRAP_TYPE_PRIO = common dso_local global i32 0, align 4
@RES_LPTRAP = common dso_local global i32 0, align 4
@TRAP_TYPE_NONPRIO = common dso_local global i32 0, align 4
@CERR_BADASSOC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.recvbuf*, i32)* @unset_trap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unset_trap(%struct.recvbuf* %0, i32 %1) #0 {
  %3 = alloca %struct.recvbuf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.recvbuf* %0, %struct.recvbuf** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @TRAP_TYPE_PRIO, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @RES_LPTRAP, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @TRAP_TYPE_NONPRIO, align 4
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %11, %2
  %14 = load %struct.recvbuf*, %struct.recvbuf** %3, align 8
  %15 = getelementptr inbounds %struct.recvbuf, %struct.recvbuf* %14, i32 0, i32 1
  %16 = load %struct.recvbuf*, %struct.recvbuf** %3, align 8
  %17 = getelementptr inbounds %struct.recvbuf, %struct.recvbuf* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @ctlclrtrap(i32* %15, i32 %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %13
  %23 = load i32, i32* @CERR_BADASSOC, align 4
  %24 = call i32 @ctl_error(i32 %23)
  br label %25

25:                                               ; preds = %22, %13
  %26 = call i32 @ctl_flushpkt(i32 0)
  ret void
}

declare dso_local i32 @ctlclrtrap(i32*, i32, i32) #1

declare dso_local i32 @ctl_error(i32) #1

declare dso_local i32 @ctl_flushpkt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
